# pytidb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml  sitemap.xml  test_async_issues.py  test_async_unit.py  test_connect_context_manager.py  test_exception_propagation.py  test_execute_sql_fix.py  worklog.md
.devcontainer/: devcontainer.json
docs/: .env.example  README.md  mcp.md  mkdocs.yml  pyproject.toml  quickstart.ipynb
examples/: async_basic_example.py  async_basic_usage.py  async_usage.py
examples/global_memory/: .env.example  .gitignore  README.md  app.py  db_models.py  llm_service.py  main.py  models.py  pyproject.toml  session_manager.py  test_app.py
javascripts/: mathjax.js
mcp_resources/: vector_search.md
pytidb/: __init__.py  async_client.py  async_result.py  async_session.py  async_table.py  client.py  databases.py  filters.py  functions.py  fusion.py  result.py  schema.py  search.py  sql.py  table.py  utils.py
quickstart/: index.html
search/: search_index.json
styles/: extra.css
tests/: conftest.py  dynamic_table.py  test_async_client.py  test_async_client_fixed.py  test_async_databases.py  test_async_engine_sync.py  test_async_fixes.py  test_async_search.py  test_async_table.py  test_async_table_constructor.py  test_async_utils.py  test_async_wrapper.py  test_auto_embedding.py  test_auto_embedding_image.py  test_auto_embedding_server.py  test_ca_path.py  test_client_ca_path.py  test_client_config.py  test_client_connection.py  test_client_ssl.py  test_crud.py  (+33 more)
(+164 files in other folders)
